# DW_final

./: .env.example  .gitignore  DATASET_ORGANIZATION.md  DEVELOPMENT_CHECKLIST.md  DW_final_v1.py  KAGGLE_INTEGRATION.md  KAGGLE_INTEGRATION_MAIN_APP.md  KAGGLE_INTEGRATION_STATUS.md  PERSISTENCE.md  README.md  WORKFLOW_EDITOR.md  WORKFLOW_NODES.md  data_whisperer_overview_part1.md  data_whisperer_overview_part2.md  data_whisperer_overview_part3.md  data_whisperer_overview_part4.md  data_whisperer_overview_part5.md  data_whisperer_technical_overview.md  data_whisperer_updates_task_list.md  docker-compose.yml  requirements.txt  start.sh  start_app.sh  track_file_changes.sh  vite.config.ts
backend/: Dockerfile  KAGGLE_CONSOLIDATION_SUMMARY.md  KAGGLE_IMPLEMENTATION_PLAN.md  KAGGLE_MIGRATION_PLAN.md  README.md  alembic.ini  cleanup_kaggle_files.py  entrypoint.sh  find_kaggle_files.py  init_db.py  initialize_dataset_organization.py  install_deps.py  list_datasets.py  main.py  main_fixed.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run.py  run_kaggle_debug_server.py  run_kaggle_tests.py  run_server.py  run_server_fixed.py  run_server_with_kaggle.py  run_simple.py  simple_test.py  standalone_kaggle_server.py  start_backend.sh  test_api.py  test_dataset_organization.py  test_endpoints.py  test_kaggle.py  test_kaggle_api.py  test_kaggle_api_endpoints.py  test_kaggle_endpoints.py  test_kaggle_integration.py
backend/api/: __init__.py  kaggle_utils.py  main.py  workflow_ai.py
backend/app/: __init__.py  config.py  create_migration.py  create_sample_data.py  (+11 more)
(+382 files in other folders)
