[tool.poetry]
name = "dw-final-backend"
version = "0.1.0"
description = "Backend for Data Wrangling Final Project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.9"
pandas = "^2.2.0"
kaggle = "^1.6.6"
python-dotenv = "^1.0.1"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 